--- a/Project/index.html
+++ b/Project/index.html
@@ -18,27 +18,37 @@
     <section id="Header">
 
         <div id="Logo">
-            <h1>Alpha <span>by HTML5 UP</span></h1>
+            <h1>
+                Alpha <span>by HTML5 UP</span>
+            </h1>
         </div>
         <div id="Options">
             <ul>
                 <li>Home</li>
-                <li><i class="fa fa-angle-down" aria-hidden="true"></i>
-                    Layout</li>
-                <li><span id="border1">Sign Up</span></li>
+                <li>
+                    <i class="fa fa-angle-down" aria-hidden="true"></i>
+                    Layout
+                </li>
+                <li>
+                    <span id="border1">
+                        Sign Up
+                    </span>
+                </li>
             </ul>
         </div>
-
     </section>
-    <section id="Body"></section>
-    <div id="BodyCenter">
-        <h2>Alpha</h2>
-        <p>Another fine responsive site template freebie by HTML5 UP.</p>
-        <ul>
-            <li>Sign up</li>
-            <li>Learn More</li>
-        </ul>
-    </div>
+
+    <section id="Body">
+        <div id="BodyCenter">
+            <h2>Alpha</h2>
+            <p>Another fine responsive site template freebie by HTML5 UP.</p>
+            <ul>
+                <li>Sign up</li>
+                <li>Learn More</li>
+            </ul>
+        </div>
+    </section>
+    
     <section id="Description"></section>
     <section id="Icon"></section>
     <section id="LearnMore"></section>
