--- a/Project/index.html
+++ b/Project/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!-- Cloning Alpha by HTML5 UP as a mini project (NinadKarlekar) -->
     <section id="Header">
 
         <div id="Logo">
