--- a/Project/index.html
+++ b/Project/index.html
@@ -26,8 +26,8 @@
         <div id="Options">
             <ul>
                 <li>Home</li>
-                <li>
-                    <i class="fa fa-angle-down" aria-hidden="true"></i>
+                <li><span><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+                    
                     Layout
                 </li>
                 <li>
@@ -44,7 +44,8 @@
             <h2>Alpha</h2>
             <p>Another fine responsive site template freebie by HTML5 UP.</p>
             <ul>
-                <li>Sign up</li>
+                <li id="BodySign">Sign up</li>
+                
                 <li>Learn More</li>
             </ul>
         </div>
